<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.s.eatit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.s.eatit.ui.menu.MenuFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.s.eatit.ui.FoodDetail.FoodDetailFragment"
        android:label="@string/menu_foodDetail"
        tools:layout="@layout/fragment_food_detail" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.s.eatit.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_foodlist"
        android:name="com.s.eatit.ui.foodlist.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_foodlist" />
</navigation>